--- a/app/index.html
+++ b/app/index.html
@@ -15,21 +15,33 @@
     <link rel="stylesheet" href="styles/custom.css">
     <!-- endbuild -->
 </head>
-<body >
-<div >
-    <b>Profile</b><br>
-    <profile></profile>
-    <br>
-    <hr>
-    <br>
-    <b>Admin Profile</b><br>
-    <profile-admin></profile-admin>
+<body data-ng-init="showDirective='profile-label'">
+<div class="page-header">
+    <h1>unchatbar - user</h1>
+</div>
+
+<div class="container">
+    <div class="panel panel-primary">
+        <div class="panel-heading">un-profile-admin</div>
+        <div class="panel-body">
+            <un-profile-admin></un-profile-admin>
+        </div>
+    </div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">un-profile-label</div>
+        <div class="panel-body">
+            <un-profile-label></un-profile-label>
+        </div>
+    </div>
+
+</div>
+
+
 </div>
 <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
-
 
 
 <!-- build:js(.) scripts/oldieshim.js -->
@@ -43,7 +55,6 @@
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/peerjs/peer.js"></script>
 <script src="bower_components/ngstorage/ngStorage.js"></script>
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
 <!-- endbower -->
