--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/ng-img-crop/compile/minified/ng-img-crop.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -54,6 +55,8 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/ngstorage/ngStorage.js"></script>
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+<script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
+<script src="bower_components/jdenticon/jdenticon.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -65,6 +68,7 @@
 
 <script src="scripts/controller/profile.js"></script>
 
+<script src="scripts/directive/fileModel.js"></script>
 <script src="scripts/directive/profile.js"></script>
 <script src="scripts/directive/profile-admin.js"></script>
 <script src="scripts/run.js"></script>
