--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
 <script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
 <script src="bower_components/peerjs/peer.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/app.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/run.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/template.js"></script>
@@ -67,6 +68,7 @@
 <script src="bower_components/unchatbar-connection/app/scripts/directive/login.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/directive/peerId.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/controller/dialer.js"></script>
+<script src="bower_components/unchatbar-connection/app/scripts/controller/model-password.js"></script>
 <script src="bower_components/blockies/blockies.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
