--- a/app/index.html
+++ b/app/index.html
@@ -43,12 +43,13 @@
 <script src="bower_components/peerjs/peer.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
+<script src="bower_components/dexie/dist/latest/Dexie.min.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/app.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/run.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/template.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/translations.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/provider/broker.js"></script>
-<script src="bower_components/unchatbar-connection/app/scripts/provider/data-connection.js"></script>
+<script src="bower_components/unchatbar-connection/app/scripts/service/data-connection.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/service/peer.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/directive/dialer.js"></script>
 <script src="bower_components/unchatbar-connection/app/scripts/directive/login.js"></script>
